hintbox,hangman and guessletter placed in container

--- a/hangman.html
+++ b/hangman.html
@@ -22,16 +22,18 @@
       <button onclick="playAgain()" id="startOver">Start over</button>
     </div>
   </div>
-  <div id="hintbox"></div>
+  <div class="container">
 
-  <div id="hangman"></div>
+    <div id="hintbox"></div>
 
-  <div id="guessLetters">Hint:</div>
+    <div id="hangman"></div>
 
+    <div id="guessLetters">Hint:</div>
 
-  <footer id="ending">Hang'in with the Sixers</footer>
+    <div>
+      <footer id="ending">Hang'in with the Sixers</footer>
 
-  <script type="text/javascript" src="hm.js"></script>
+      <script type="text/javascript" src="hm.js"></script>
 
 </body>
 
